Feat: Sign in, Get user profile, Delete user account
